# Registry

./: .gitignore  README.md  com.github.planificala.Registry.json  meson.build
data/: com.github.planificala.Registry.appdata.xml.in  com.github.planificala.Registry.desktop.in  com.github.planificala.Registry.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  window.vala
src/classes/: Classroom.vala
src/database/: DatabaseManagement.vala
